[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/white.png" type="Texture" id=1]
[ext_resource path="res://components/Drone/Drone.tscn" type="PackedScene" id=2]
[ext_resource path="res://components/Boundaries/Boundaries.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Game.gd" type="Script" id=4]
[ext_resource path="res://assets/tileset.tres" type="TileSet" id=6]
[ext_resource path="res://components/ExpressDialog/ExpressDialog.tscn" type="PackedScene" id=10]
[ext_resource path="res://components/EnergyBar/ProgressBar.tscn" type="PackedScene" id=11]
[ext_resource path="res://components/Fog/Fog.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/Camera2D.gd" type="Script" id=13]
[ext_resource path="res://components/DeliveryQuota/DeliveryQuota.tscn" type="PackedScene" id=16]
[ext_resource path="res://assets/dizzyedgeDEMO.otf" type="DynamicFontData" id=17]

[sub_resource type="ShaderMaterial" id=2]

[sub_resource type="Shader" id=30]
code = "shader_type canvas_item;

uniform float vignette_intensity = 0.4;
uniform float vignette_opacity : hint_range(0.0, 1.0) = 0.5;
uniform vec4 vignette_rgb : hint_color = vec4(0.0, 0.0, 0.0, 1.0);

float vignette(vec2 uv){
	uv *= 1.0 - uv.xy;
	float vignette = uv.x * uv.y * 15.0;
	return pow(vignette, vignette_intensity * vignette_opacity);
}

void fragment(){
	vec4 color = texture(SCREEN_TEXTURE, SCREEN_UV);
	vec4 text = texture(TEXTURE, UV);
	
	text.rgba *= (vignette_rgb.rgba);
	text.rgba *= (1.0 - vignette(UV));
	
	COLOR = vec4((text.rgb)*color.rgb,text.a);
}"

[sub_resource type="ShaderMaterial" id=31]
shader = SubResource( 30 )
shader_param/vignette_intensity = 0.4
shader_param/vignette_opacity = 0.261
shader_param/vignette_rgb = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=32]
size = 30
use_filter = true
font_data = ExtResource( 17 )

[sub_resource type="Environment" id=29]
background_mode = 4
ambient_light_color = Color( 1, 1, 1, 1 )
glow_enabled = true
glow_intensity = 0.93
glow_bloom = 0.11
glow_blend_mode = 1
glow_hdr_luminance_cap = 45.57
adjustment_enabled = true
adjustment_brightness = 1.52
adjustment_contrast = 1.09
adjustment_saturation = 0.83

[node name="Game" type="Node2D"]
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0.14902, 0.235294, 0.27451, 0.435294 )
material = SubResource( 2 )
margin_left = -6149.0
margin_top = -4384.0
margin_right = 5885.0
margin_bottom = 5061.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 2

[node name="Fog" parent="TextureRect" instance=ExtResource( 12 )]
margin_left = -54.0
margin_top = 2.0
margin_right = 12074.0
margin_bottom = 9527.0

[node name="Drone" parent="." instance=ExtResource( 2 )]
position = Vector2( -1084, 440 )

[node name="Camera2D" type="Camera2D" parent="Drone"]
position = Vector2( -14, 321 )
current = true
zoom = Vector2( 2, 2 )
smoothing_enabled = true
smoothing_speed = 2.0
script = ExtResource( 13 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 6 )
format = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Vignette" type="ColorRect" parent="CanvasLayer"]
material = SubResource( 31 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ProgressBar" parent="CanvasLayer" instance=ExtResource( 11 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -475.0
margin_top = 27.0
margin_right = -28.0
margin_bottom = 41.0

[node name="Label" type="Label" parent="CanvasLayer/ProgressBar"]
margin_left = -135.0
margin_top = -5.0
margin_right = -33.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 32 )
text = "Energy"

[node name="ExpressDialog" parent="CanvasLayer" instance=ExtResource( 10 )]

[node name="DeliveryQuota" parent="CanvasLayer" instance=ExtResource( 16 )]

[node name="Crates" type="Node2D" parent="."]

[node name="Receivers" type="Node2D" parent="."]

[node name="NextLevelSwitcher" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 29 )

[node name="Boundaries" parent="." instance=ExtResource( 3 )]
position = Vector2( -677, 251 )
scale = Vector2( 0.8, 0.8 )

[connection signal="timeout" from="NextLevelSwitcher" to="." method="_on_NextLevelSwitcher_timeout"]
